modified:   index.js 	modified:   middleware/authenticate.js 	modified:   routes/index.js 	modified:   routes/swagger.js 	modified:   swagger.json
